src/query/snapshots/tidx__query__parser__tests__rewrite_filters_multiple.snap
---
source: src/query/parser.rs
expression: sig.rewrite_filters_for_pushdown(sql)
---
SELECT * FROM Transfer WHERE topic1 = '0x000000000000000000000000dac17f958d2ee523a2206206994597c13d831ec7' AND topic2 = '0x000000000000000000000000a726a1cd723409074df9108a2187cfa19899acf8'
